# stream-to-video-file

./: .gitignore  MAKE87.yml  README.md  pyproject.toml
app/: main.py
build_kit/: Dockerfile  Dockerfile.dev
